bubba-frontend (2.4~pre32) hugo vincent; urgency=low

  * should remove the call as well

 -- Carl Fürstenberg <carl@excito.com>  Thu, 19 Jan 2012 16:57:56 +0100

bubba-frontend (2.4~pre31) hugo vincent; urgency=low

  * remove convinience copy of the jquery.ui.dialog

 -- Carl Fürstenberg <carl@excito.com>  Thu, 19 Jan 2012 16:50:41 +0100

bubba-frontend (2.4~pre30) hugo vincent; urgency=low

  * Fixing status identifiers from diskdaemon (Closes: #1837)

 -- Carl Fürstenberg <carl@excito.com>  Thu, 19 Jan 2012 13:38:02 +0100

bubba-frontend (2.4~pre29) hugo vincent; urgency=low

  * Add parameter 3 to renederfull (Closes: #1836)
  * Remove the automatic checking of private bridge (Closes: #1834)
  * Fix syntax error in ajax_status (Closes: #1691)
  * update that default language into default locale on upgrade (Closes: #1838)

 -- Carl Fürstenberg <carl@excito.com>  Tue, 17 Jan 2012 14:59:04 +0100

bubba-frontend (2.4~pre28) hugo vincent; urgency=low

  * Fix model loading from model backup (Closes: #1831)

 -- Carl Fürstenberg <carl@excito.com>  Mon, 16 Jan 2012 13:11:37 +0100

bubba-frontend (2.4~pre27) hugo vincent; urgency=low

  * fix dialog buttons in disk raid js (Closes: #1828)

 -- Carl Fürstenberg <carl@excito.com>  Fri, 13 Jan 2012 13:27:55 +0100

bubba-frontend (2.4~pre26) hugo vincent; urgency=low

  * Remove dash as a legal character for tor nickname.

 -- Carl Fürstenberg <carl@excito.com>  Thu, 12 Jan 2012 14:27:44 +0100

bubba-frontend (2.4~pre25) hugo vincent; urgency=low

  * updating copyright file to include information about Tor collaboration
    (Closes: #1805)

 -- Carl Fürstenberg <carl@excito.com>  Tue, 10 Jan 2012 15:49:45 +0100

bubba-frontend (2.4~pre24) vincent hugo; urgency=low

  * update german translations (Closes: #1816)

 -- Carl Fürstenberg <carl@excito.com>  Wed, 04 Jan 2012 17:49:03 +0100

bubba-frontend (2.4~pre23) vincent hugo; urgency=low

  * Add original favicon (Closes: #1826)
  * Adding Swedish message cataloges
